<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Split The Cost</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="numPeople">人数：</string>
    <string name="people">人</string>
    <string name="money">金額：</string>
    <string name="yen">円</string>
    <string name="cals">計算</string>
    <string name="oneMoney">一人あたりの金額</string>
    <string name="result">0</string>
    <string name="key_roundup"></string>
    <string name="roundup_title">端数切り上げ</string>
    <string name="fraction">端数</string>
    <string name="dia_log_fraction">端数を入力してください</string>
    <string name="setting_name">設定</string>
    <string name="numIni">0</string>

</resources>